--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
     --color-text1: #343434;
     --color-text2: #ffffff;
