--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -10,3 +10,12 @@
     --color-five: #d754ff;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
