--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -19,3 +19,7 @@ header {
     align-items: center;
     justify-content: space-around;
 }
+header__titulo {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 24px;
+}
