--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -18,6 +18,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: var(--color-one);
 }
 header__titulo {
     font-family: 'IBM Plex Sans', sans-serif;
