--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -13,6 +13,10 @@
 * {
     margin: 0;
     padding: 0;
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Inter', sans-serif;
+    font-size: 13px;
 }
 header {
     display: flex;
@@ -25,4 +29,8 @@ header {
     font-family: 'Inter', sans-serif;
     font-size: 24px;
     font-weight: 100;
+}
+.header__busca {
+    padding: 5px;
+    border-radius: 20%;
 }
