--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -27,6 +27,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10%;
 }
 #header__img {
     filter: invert(100%);
