--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -38,6 +38,8 @@ header {
     font-weight: 100;
 }
 .header__busca {
+    display: flex;
+    align-items: center;
     padding: 5px;
     border-radius: 20%;
 }
