--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -38,7 +38,7 @@ header {
     font-size: 24px;
     font-weight: 100;
 }
-.header__busca {
+#header__busca {
     display: flex;
     align-items: center;
     padding: 5px;
