--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -32,6 +32,7 @@ header {
 }
 #header__img {
     filter: invert(100%);
+    width: 15px;
 }
 .header__titulo {
     font-family: 'Inter', sans-serif;
@@ -43,4 +44,5 @@ header {
     align-items: center;
     padding: 5px;
     border-radius: 20%;
+    background-color: var(--color-text2);
 }
