--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -46,10 +46,10 @@ header {
     color: var(--color-text2);
 }
 #header__barra {
+    background: none;
      border: none;
-     background-color: var(--color-text2);
      color: var(--color-text2);
-     background: none;
      outline: none;
      padding: 0;
+     width: 0;
 }
