--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -23,6 +23,8 @@ header {
     background-color: var(--color-one);
     color: var(--color-text2);
     gap: 15%;
+    width: 100%;
+    height: 10%;
 }
 .header__titulo {
     font-family: 'Inter', sans-serif;
