--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -24,7 +24,7 @@ header {
     color: var(--color-text2);
     gap: 15%;
     width: 100%;
-    height: 30%;
+    height: 10vh;
 }
 .header__titulo {
     font-family: 'Inter', sans-serif;
