--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -52,4 +52,6 @@ header {
 .header__link {
     padding: 1.5em;
     text-decoration: none;
+    color: var(--color-text2);
+    font-size: 16px;
 }
