--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -41,7 +41,7 @@ header {
     border: none;
     color: var(--color-text2);
     outline: none;
-    padding: 0;
+    font-size: 14.5px;
 }
 #header__img {
     filter: invert(100%);
