--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -51,9 +51,11 @@ header {
     display: flex;
 }
 .header__link {
+    display: flex;
     background-color: var(--color-three);
     box-shadow: 1px 1px 4px var(--color-two);
-    padding: 1.5em;
+    padding: 1em 7px;
+    gap: 15px;
     text-decoration: none;
     color: var(--color-four);
     font-size: 16px;
