--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -49,12 +49,12 @@ header {
 }
 .header__ul {
     display: flex;
-    gap: 15px;
+    gap: 20px;
 }
 .header__link {
     background-color: var(--color-three);
     box-shadow: 1px 1px 4px var(--color-two);
-    padding: 1em 7px;
+    padding: 10px;
     text-decoration: none;
     color: var(--color-four);
     font-size: 16px;
