--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -4,7 +4,7 @@
     --color-text1: #343434;
     --color-text2: #ffffff;
     --color-one: #4d0303;
-    --color-two: #ff0000;
+    --color-two: #8d0000;
     --color-three: #530404;
     --color-four: #f0f0f0;
     --color-five: #d754ff;
@@ -53,7 +53,7 @@ header {
 }
 .header__link {
     background-color: var(--color-three);
-    box-shadow: 1px 1px 12px var(--color-two);
+    box-shadow: 1px 1px 4px var(--color-two);
     padding: 10px;
     text-decoration: none;
     color: var(--color-four);
