--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -5,7 +5,7 @@
     --color-text2: #ffffff;
     --color-one: #4d0303;
     --color-two: #8d0000;
-    --color-three: #5f0505;
+    --color-three: #410404;
     --color-four: #f0f0f0;
     --color-five: #d754ff;
 }
