--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -4,8 +4,8 @@
     --color-text1: #343434;
     --color-text2: #ffffff;
     --color-one: #4d0303;
-    --color-two: #8d0000;
-    --color-three: #410404;
+    --color-two: #470303;
+    --color-three: #5f0505;
     --color-four: #f0f0f0;
     --color-five: #d754ff;
 }
