--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -54,7 +54,7 @@ header {
 .header__link {
     background-color: var(--color-three);
     box-shadow: 1px 1px 4px var(--color-two);
-    border-radius: 25%;
+    border-radius: 10px;
     padding: 10px;
     text-decoration: none;
     color: var(--color-four);
