--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -61,3 +61,16 @@ header {
     font-size: 16px;
     font-weight: 300;
 }
+.header__link::after {
+    content: " ";
+    width: 0;
+    height: 3px;
+    background-color: var(--color-three);
+    bottom: 0;
+    left: 0;
+    transition: 0.4s ease-in-out;
+}
+.header__link::after:hover {
+    width: 100%;
+    background-color: var(--color-one);
+}
