--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -71,6 +71,7 @@ header {
     height: 3px;
     background-color: var(--color-three);
     transition: 0.4s ease-in-out;
+    position: absolute;
 }
 .header__link::after:hover {
     width: 100%;
