--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -67,11 +67,13 @@ header {
 }
 .header__link::after {
     content: " ";
-    width: 0;
-    height: 3px;
+    width: 100%;
+    height: 4px;
     background-color: var(--color-three);
     transition: 0.4s ease-in-out;
     position: absolute;
+    bottom: 0;
+    top: 0;
 }
 .header__link::after:hover {
     width: 100%;
