--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -67,8 +67,8 @@ header {
 }
 .header__link::after {
     content: " ";
-    width: 100%;
     height: 4px;
+    width: 0;
     background-color: var(--color-three);
     transition: 0.4s ease-in-out;
     position: absolute;
