--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -66,7 +66,9 @@ header {
     background-color: var(--color-one);
 }
 .apresentacao {
-    width: 75%;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
 }
 .apresentacao__titulo {
     font-size: 18px;
