--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -69,6 +69,7 @@ header {
     width: 40%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 .apresentacao__titulo {
     font-size: 18px;
