--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -67,9 +67,7 @@ header {
 }
 .apresentacao {
     width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+text-align: center;
 }
 .apresentacao__titulo {
     font-size: 18px;
