--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -65,9 +65,14 @@ header {
 .header__link:hover {
     background-color: var(--color-one);
 }
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
 .apresentacao {
     width: 40%;
-text-align: center;
 }
 .apresentacao__titulo {
     font-size: 18px;
