--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -69,7 +69,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
 }
 .apresentacao {
     width: 40%;
