--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -66,17 +66,11 @@ header {
     background-color: var(--color-one);
 }
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100vw;
-}
-.apresentacao {
-    width: 40%;
+    margin: 7% 30%;
+    margin-top: 3%;
 }
 .apresentacao__titulo {
     font-size: 18px;
-    margin-top: 2em;
     text-align: center;
 }
 .apresentacao__subtitulo {
