--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -86,7 +86,9 @@ main {
     margin-top: 5em;
     margin-bottom: 1rem;
     font-size: 17px;
+    text-align: center;
 }
 .contato__titulo {
     font-size: 14.5;
+    text-align: center;
 }
