--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -85,10 +85,11 @@ main {
 .contato {
     margin-top: 5em;
     margin-bottom: 1rem;
-    font-size: 17px;
     text-align: center;
 }
 .contato__titulo {
-    font-size: 14.5;
-    text-align: center;
+    font-size: 17px;
+}
+.contate__email {
+    font-size: 14.5px;
 }
