--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -84,7 +84,7 @@ main {
 }
 .contato {
     margin-top: 5em;
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
     text-align: center;
 }
 .contato__titulo {
