--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -98,11 +98,13 @@ footer {
     bottom: 0;
     width: 100%;
     font-weight: 300;
-    font-size: 18px;
     background-color: var(--color-five);
     color: var(--color-three);
     height: 2.5em;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.footer__text {
+    font-size: 18px;
 }
