--- a/folhas de estilo/disciplinas.css
+++ b/folhas de estilo/disciplinas.css
@@ -11,7 +11,7 @@
     margin: 8px 0;
     text-decoration: none;
     color: var(--color-text2);
-    background-color: var(--color-one);
+    background-color: var(--color-three);
     box-shadow: 1px 1px 4px var(--color-two);
 }
 .disciplinas__itens:hover {
