--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -8,6 +8,8 @@
     --color-three: #5f0505;
     --color-four: #f0f0f0;
     --color-five: #ffe4e4;
+    --color-six: #ffcdcd;
+    --color-seven: #ffe9e9;
 }
 
 * {
@@ -15,6 +17,7 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
     font-size: 13px;
+    background-color: linear-gradient (145 deg, var(--color-six), var(--color-seven));
 }
 header {
     display: flex;
