--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -17,6 +17,8 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
     font-size: 13px;
+}
+body {
     background-color: linear-gradient (145 deg, var(--color-six), var(--color-seven));
 }
 header {
