--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -19,7 +19,7 @@
     font-size: 13px;
 }
 body {
-    background: linear-gradient (145 deg, var(--color-six), var(--color-seven));
+    background: linear-gradient (145 deg, var(--color-six), var(--color-seven), black);
 }
 header {
     display: flex;
