--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -19,7 +19,7 @@
     font-size: 13px;
 }
 body {
-    background: linear-gradient(145 deg, #ffa7a7, #ffe9e9);
+    background-image: linear-gradient(145 deg, #ffa7a7, #ffe9e9);
 }
 header {
     display: flex;
