--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -19,7 +19,8 @@
     font-size: 13px;
 }
 body {
-    background-image: linear-gradient(145deg, #ffa7a7, #ffe9e9)
+    background-image: linear-gradient(145deg, #ffa7a7, #ffe9e9);
+    height: 100%;
 }
 header {
     display: flex;
