--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -19,8 +19,8 @@
     font-size: 13px;
 }
 body {
-    background-image: linear-gradient(145deg, #ffa7a7, #ffe9e9);
-    height: 100%;
+    background-image: linear-gradient(145deg, #ffcdcd, #ffecec);
+    height: 100vh;
 }
 header {
     display: flex;
@@ -104,7 +104,6 @@ footer {
     bottom: 0;
     width: 100%;
     font-weight: 300;
-    background-color: var(--color-five);
     color: var(--color-three);
     height: 2.5em;
     display: flex;
