--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -9,7 +9,6 @@
     --color-four: #f0f0f0;
     --color-five: #ffe4e4;
     --color-six: #ffcdcd;
-    --color-seven: #ffe9e9;
 }
 
 * {
@@ -19,7 +18,7 @@
     font-size: 13px;
 }
 body {
-    background-image: linear-gradient(145deg, #ffcdcd, #ffecec);
+    background-image: linear-gradient(145deg, var(--color-six), var(--color-four));
     height: 100vh;
 }
 header {
