--- a/folhas de estilo/disciplinas.css
+++ b/folhas de estilo/disciplinas.css
@@ -3,11 +3,12 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 2.5em;
-    width: 100%;
 }
 .disciplinas__itens {
     border-radius: 6px;
-    padding: 7px;
+    padding: 11px;
+    font-size: 16px;
+    font-weight: 500;
     margin: 8px 0;
     text-decoration: none;
     color: var(--color-text2);
