--- a/folhas de estilo/disciplinas.css
+++ b/folhas de estilo/disciplinas.css
@@ -6,12 +6,13 @@
 }
 .disciplinas__itens {
     border-radius: 6px;
+    text-align: center;
     padding: 11px;
     font-size: 16px;
     font-weight: 500;
     margin: 8px 0;
     text-decoration: none;
-    color: var(--color-text2);
+    color: var(--color-text1);
     background-color: var(--color-five);
     box-shadow: 1px 1px 2px var(--color-six);
     transition: 0.4s ease-in-out;
