--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -8,8 +8,7 @@
     --color-three: #5f0505;
     --color-four: #f0f0f0;
     --color-five: #ffe4e4;
-    --color-six: #ffcdcd;
-}
+    --color-six: #ffcdcd;}
 
 * {
     margin: 0;
