--- a/folhas de estilo/disciplinas.css
+++ b/folhas de estilo/disciplinas.css
@@ -12,11 +12,11 @@
     font-weight: 500;
     margin: 8px 0;
     text-decoration: none;
-    color: var(--color-text1);
+    color: var(--color-three);
     background-color: var(--color-six);
     box-shadow: 1px 1px 2px var(--color-six);
     transition: 0.4s ease-in-out;
 }
 .disciplinas__itens:hover {
-    background-color: none;
+    background-color: transparent;
 }
