--- a/folhas de estilo/disciplinas.css
+++ b/folhas de estilo/disciplinas.css
@@ -3,6 +3,7 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 2.5em;
+    width: 50%;
 }
 .disciplinas__itens {
     border-radius: 6px;
@@ -19,4 +20,5 @@
 }
 .disciplinas__itens:hover {
     background-color: transparent;
+    box-shadow: none;
 }
