--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -117,3 +117,15 @@ footer {
 .footer__text {
     font-size: 18px;
 }
+
+@media screen and (min-width: 394px) and (max-width: 820) {
+    .header__busca {
+        display: none;
+    }
+    .header__titulo {
+        font-size: 20px;
+    }
+    .header__link {
+        font-size: 14px;
+    }
+}
