--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -118,7 +118,7 @@ footer {
     font-size: 18px;
 }
 
-@media screen and (min-width: 394px) and (max-width: 820) {
+@media screen and (min-width: 394px) and (max-width: 820px) {
     .header__busca {
         display: none;
     }
