--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -119,7 +119,7 @@ footer {
 }
 
 @media screen and (min-width: 394px) and (max-width: 820px) {
-    .header__busca {
+    #header__busca {
         display: none;
     }
     .header__titulo {
