--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -118,7 +118,7 @@ footer {
     font-size: 18px;
 }
 
-@media screen and (min-width: 394px) and (max-width: 820px) {
+@media screen and (min-width: 540px) and (max-width: 820px) {
     #header__busca {
         display: none;
     }
@@ -127,5 +127,18 @@ footer {
     }
     .header__link {
         font-size: 14px;
+    }
+}
+@media screen and (min-width: 394px) and (max-width: 519px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__titulo {
+        font-size: 17px;
+    }
+    .header__link {
+        font-size: 12px;
     }
 }
