--- a/folhas de estilo/sobrenos.css
+++ b/folhas de estilo/sobrenos.css
@@ -16,6 +16,12 @@ body {
 .main__img {
     width: 90px;
 }
+.main__nos {
+    width: 600px;
+}
+.main__fotos {
+    width: 200px;
+}
 footer {
     bottom: 0;
     position: relative;
