--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -19,6 +19,7 @@
 body {
     background-image: linear-gradient(145deg, var(--color-six), var(--color-four));
     height: 100vh;
+    width: auto;
 }
 header {
     display: flex;
