--- a/folhas de estilo/sobrenos.css
+++ b/folhas de estilo/sobrenos.css
@@ -48,9 +48,9 @@ footer {
     width: 70px;
     height: 14px;
     border-radius: 7px;
-    border: 2px solid #5f0505;
+    border: 2px solid #ffcdcd;
     margin: auto;
 }
 .bar:hover {
-    background-color: #5f0505;
+    background-color: #ffcdcd;
 }
