--- a/folhas de estilo/sobrenos.css
+++ b/folhas de estilo/sobrenos.css
@@ -71,7 +71,9 @@ input {
     width: 20%;
     transition: .5s;
 }
-.slide img {
-    width: 100%;
-    height: 100%;
+#slide1:checked ~ .s1 {
+    margin-left: 0;
+}
+#slide2:checked ~ .s1 {
+    margin-left: -20%;
 }
