--- a/folhas de estilo/sobrenos.css
+++ b/folhas de estilo/sobrenos.css
@@ -33,7 +33,9 @@ footer {
     bottom: 0;
     position: relative;
 }
-input {
+
+
+/* input {
     display: none;
 }
 .teste__slider {
@@ -61,19 +63,4 @@ input {
 .bar:hover {
     background-color: #a7a7a7;
     height: 100%;
-}
-.slides {
-    display: flex;
-    width: 500%;
-    height: 100%;
-}
-.slide {
-    width: 20%;
-    transition: .5s;
-}
-#slide1:checked ~ .s1 {
-    margin-left: 0;
-}
-#slide2:checked ~ .s1 {
-    margin-left: -20%;
-}
+} */
