--- a/folhas de estilo/sobrenos.css
+++ b/folhas de estilo/sobrenos.css
@@ -34,6 +34,18 @@ footer {
     position: relative;
 }
 
+.slider {
+    overflow-x: scroll;
+    width: 150px;
+}
+.content {
+    display: flex;
+    width: fit-content;
+}
+.content img {
+    width: 150px;
+    object-fit: cover;
+}
 
 /* input {
     display: none;
