--- a/folhas de estilo/sobrenos.css
+++ b/folhas de estilo/sobrenos.css
@@ -34,18 +34,53 @@ footer {
     position: relative;
 }
 
-.slider {
-    overflow-x: scroll;
-    width: 150px;
-}
-.content {
+
+
+  .container-slider {
     display: flex;
-    width: fit-content;
-}
-.content img {
-    width: 150px;
-    object-fit: cover;
-}
+    width: 100%;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  
+  .container-images {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 700px;
+  }
+  
+  .slider {
+    opacity: 0;
+    transition: opacity .2s;
+    position: absolute;
+    width: 100%;
+    border-radius: 10px;
+  }
+  
+  .on {
+    opacity: 1;
+  }
+  
+  #prev-button, #next-button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  #prev-button img, #next-button img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  #prev-button {
+    transform: rotate(180deg);
+  }
 
 /* input {
     display: none;
