--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -105,7 +105,7 @@ main {
     font-size: 14.5px;
 }
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     font-weight: 300;
