--- a/folhas de estilo/suporte.css
+++ b/folhas de estilo/suporte.css
@@ -6,50 +6,23 @@
     width: auto;
 }
 fieldset{
-    border: 3px solid dodgerblue;
+    border: 2px solid #d6d6d6;
 }
-legend{
-    border: 1px solid dodgerblue;
-    padding: 10px;
-    text-align: center;
-    background-color: dodgerblue;
-    border-radius: 8px;
-}
-.inputBox{
-    position: relative;
-}
+
 .inputUser{
     background: none;
     border: none;
     border-bottom: 1px solid white;
     outline: none;
     color: white;
-    font-size: 15px;
     width: 100%;
-    letter-spacing: 2px;
 }
 .labelInput{
-    position: absolute;
-    top: 0px;
-    left: 0px;
     pointer-events: none;
     transition: .5s;
 }
-.inputUser:focus ~ .labelInput,
-.inputUser:valid ~ .labelInput{
-    top: -20px;
-    font-size: 12px;
-    color: dodgerblue;
-}
-#data_nascimento{
-    border: none;
-    padding: 8px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 15px;
-}
 #submit{
-    background-image: linear-gradient(to right,rgb(0, 92, 197), rgb(90, 20, 220));
+    background-image: linear-gradient(-145deg, var(--color-six), var(--color-four));
     width: 100%;
     border: none;
     padding: 15px;
@@ -57,7 +30,8 @@ legend{
     font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
+    transition: .4s ease-out;
 }
 #submit:hover{
-    background-image: linear-gradient(to right,rgb(0, 80, 172), rgb(80, 19, 195));
+    background-image: linear-gradient(145deg, var(--color-six), var(--color-four));
 }
