--- a/folhas de estilo/suporte.css
+++ b/folhas de estilo/suporte.css
@@ -5,9 +5,6 @@
     border-radius: 15px;
     width: auto;
 }
-fieldset{
-    border: 2px solid #d6d6d6;
-}
 
 .inputUser{
     background: none;
@@ -23,7 +20,7 @@ fieldset{
 }
 #submit{
     background-image: linear-gradient(-145deg, var(--color-six), var(--color-four));
-    width: 100%;
+    width: 33px;
     border: none;
     padding: 15px;
     color: white;
