--- a/folhas de estilo/suporte.css
+++ b/folhas de estilo/suporte.css
@@ -20,7 +20,8 @@
 }
 #submit{
     background-image: linear-gradient(-145deg, var(--color-six), var(--color-four));
-    width: 33px;
+    width: 50%;
+    height: 50%;
     border: none;
     padding: 15px;
     color: white;
