--- a/folhas de estilo/index.css
+++ b/folhas de estilo/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --color-text1: #343434;
+    --color-text1: #3d3d3d;
     --color-text2: #ffffff;
     --color-one: #4d0303;
     --color-two: #470303;
