--- a/folhas de estilo/calculadora.css
+++ b/folhas de estilo/calculadora.css
@@ -1,21 +1,20 @@
 .calculator {
-    max-width: 400px; /* Defina a largura máxima da calculadora */
-    margin: 0 auto; /* Centraliza a calculadora na página */
-    padding: 20px; /* Adiciona algum espaçamento interno à calculadora */
-    border: 2px solid #ccc; /* Adiciona uma borda para melhor visualização */
-    border-radius: 10px; /* Adiciona bordas arredondadas */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra sutil */
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .display {
-    background-color: #f8f8f8; /* Cor de fundo do visor */
+    background-color: #f8f8f8;
     padding: 10px;
-    margin-bottom: 10px; /* Adiciona espaçamento na parte inferior do visor */
-    border: 1px solid #ccc; /* Adiciona uma borda ao visor */
-    border-radius: 5px; /* Adiciona bordas arredondadas ao visor */
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-/* Estilização dos botões */
 .button {
     width: 50px;
     height: 50px;
