--- a/folhas de estilo/calc.css
+++ b/folhas de estilo/calc.css
@@ -17,19 +17,21 @@
 
 .button {
     width: 50px;
+    height: 50px;
     font-size: 18px;
     margin: 5px;
     cursor: pointer;
 }
 
 .purple-text {
-    color: #800080;
+    color: purple;
 }
 
 .gray {
     background-color: #ccc;
 }
+
 .purple {
-    background-color: #800080;
-    color: #fff;
+    background-color: purple;
+    color: #fff; /* Cor do texto para botões roxos */
 }
