--- a/folhas de estilo/calculadora.css
+++ b/folhas de estilo/calculadora.css
@@ -1,6 +1,6 @@
 .calculator {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 4em auto;
     padding: 20px;
     border: 2px solid #ccc;
     border-radius: 10px;
